# Markdown-2-Kindle

./: .gitignore  README.md  pyproject.toml  test.md
REF_ONLY/: MarkdownToKindleProjectPlan.md  NEW_MAIN.py  test_connection.py
markdown2kindle/: main.py
